# buyu

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  slide13-sanitized.html
7-南京旅游导览/: README.md  buyu-front-mock.html
7-南京旅游导览/data/facts/: zhonghuamen_fact_card_draft.md
7-南京旅游导览/data/raw/: laochengnan_route_notes.txt  zhonghuamen_sohu_notes.txt  zhonghuamen_source_1.txt  zhonghuamen_toutiao_pending.txt  zhonghuamen_wlj_notes.txt
7-南京旅游导览/docs/: SOP.md  point_schema.yaml
7-南京旅游导览/examples/: README.md  zhonghuamen.yaml
7-南京旅游导览/outputs/prompts_ready/: zhonghuamen_00_ALL_IN_ONE_COPY_TO_GPT.md  zhonghuamen_01_extract_facts.md  zhonghuamen_02_generate_story_angles.md  zhonghuamen_03_generate_script_english_3min.md  zhonghuamen_03_generate_script_expert_5min.md  zhonghuamen_03_generate_script_family_3min.md  zhonghuamen_03_generate_script_fun_3min.md  zhonghuamen_03_generate_script_normal_3min.md  zhonghuamen_INDEX.md  (+6 more)
7-南京旅游导览/prompts/: 00_all_in_one_pipeline.md  01_extract_facts.md  02_generate_story_angles.md  03_generate_script.md  04_oralize_script.md  05_fact_check.md
7-南京旅游导览/tools/: build_prompts.py
app/: __init__.py  config.py
outputs/: 步语BuYu-路演-图片版.pptx  步语BuYu-路演-图片版.pptx.inspect.ndjson
tools/: add_slide13_route_overview.ps1  generate_buyu_tech_diagram.cjs  generate_buyu_tech_diagram.ps1  html_screenshot_pptx.mjs  replace_slide13_route_overview_image.ps1  replace_slide13_with_three_images.ps1  update_slide13_buyu.ps1
tour/: server.py  voice.py
tour/data/: knowledge_base.json
tour/static/: index.html
(+5 files in other folders)
