[project]
name = "buyu"
version = "1.0.0"
description = "步语 BuYu · 南京老城南实时语音导览 — 策展可信知识库 × 实时语音模型的文旅 AI 导览"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "httpx>=0.27",
    "pydantic>=2.0",
    "websockets>=12.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
